# EasyCode

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PROBLEM_BANK_FORMAT.md  README.md  README.zh.md  docker-compose.yml
backend/: alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  08c213afce41_problem_grading_rubric_md.py  4bf34a7d9c1a_tutor_message.py  7dd90ed97fb6_submission_language_problem_reference_solutions.py  838d24d790eb_review_schedule_prior_interval_days.py  9f7c2b1a5e42_submission_review_recovery_fields.py  c245e9913b23_submission_hint_tier_reached.py  d777fcacd71e_submission_parent_submission_id_.py  dd443a00c121_submission_test_results_json.py  f1a2b3c4d5e6_drop_problem_reference_solutions_json.py
backend/app/: main.py  settings.py
backend/app/api/: diagnostics.py  history.py  mastery.py  meta.py  problems.py  review_events.py  reviews.py  srs.py  stats.py  submissions.py  training.py  tutor.py  user_settings.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  mastery.py  problem.py  review_schedule.py  snapshot.py  submission.py  tutor_message.py
backend/app/schemas/: diagnostics.py  history.py  mastery.py  problem.py  review.py  stats.py  submission.py  testcase.py  training.py  tutor.py  user_settings.py
backend/app/scripts/: seed_from_json.py  seed_rubrics.py
backend/app/services/: diagnostics_service.py  diff_util.py  llm_client.py  llm_review.py  problem_service.py  python_runner.py  review_progress.py  (+7 more)
(+181 files in other folders)
