[project]
name = "easycode-backend"
version = "0.0.1"
description = "EasyCode 个人刷题平台后端（FastAPI + SQLAlchemy + LLM 评测）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
